--- a/index.html
+++ b/index.html
@@ -14,5 +14,9 @@
     />
     <title>cv</title>
   </head>
-  <body></body>
+  <body>
+    <header class="header"></header>
+    <main class="main"></main>
+    <footer class="footer"></footer>
+  </body>
 </html>
