fix: fix src link of rss logo

--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
           <a href="https://rs.school/js/"
             ><img
               class="rss-logo"
-              src="/assets/img/logo-rsschool.png"
+              src="./assets/img/logo-rsschool.png"
               alt="rss-logo"
           /></a>
         </p>
