feat: add new information

--- a/index.html
+++ b/index.html
@@ -143,6 +143,11 @@
             </h2>
             <ul class="section-list">
               <li class="section-item">
+                <p class="item-date">Nov.&nbsp;2021 to&nbsp;present time</p>
+                <p class="item-title">&laquo;JavaScript/Front-end&raquo;</p>
+                <p class="item-content">The Rolling Scopes School</p>
+              </li>
+              <li class="section-item">
                 <p class="item-date">
                   Sep.&nbsp;2021&nbsp;&mdash; Nov.&nbsp;2021
                 </p>
